[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/UI/NavItem.gd" type="Script" id=1]

[node name="NavItem" type="Control" groups=["NavItem"]]
margin_right = 70.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.215686, 0.105882, 0.345098, 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_right = 59.0
text = "Nav Item"
valign = 1

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 35, 20 )
scale = Vector2( 0.05, 0.05 )

[node name="Active" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -20.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
color = Color( 0.356863, 0.294118, 0.541176, 1 )

[connection signal="gui_input" from="." to="." method="_on_NavItem_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_NavItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NavItem_mouse_exited"]
